[ Curtis Holt ]
- Web page has been created to help introduce people to the 
  module (curtisholt.online/easybpy)
- Created new category 'LIGHTING'.
- + get_light
- + light_power
- + light_intensity con-func
- + light_power_add
- + light_intensity_add con-func
- + get_objects_including
- + select_objects_including
- delete_collection changes.
- + get_objects_by_vertex
- + select_objects_by_vertex

[ JYoshi ]
- Fixed keyframe functions.

=== 0.0.8 ===

[ Curtis Holt ]
- get_material fixed.
- + get_nodes, accepts material reference.
- + get_node, for finding node by name.
- create_node_link no longer needs a material reference.
- + delete_node, for deleting a node from a node tree.
- Renamed 'TEXTURES' category to 'TEXTURES AND IMAGES'
- get_texture changed to pass texture reference back if already provided.
- rename_texture changed to use get_texture.
- + create_image
- + get_image
- + get_all_images
- + get_list_of_images con-func.
- + rename_image
- + delete_image
- + create_link con-func.
- + select_all_lights
- Created section: 'COMMON WORKFLOW FUNCTIONS'.
- + organize_outliner
- + suffix_convert_dataset
- + convert_suffixes_underscore
- + convert_suffixes con-func
- delete_objects: if no argument is provided, delete selected objects.
- delete_object: if no argument is provided, delete active object.
- + get_all_meshes

[ JYoshi ]
- Improved create_collection
- Simplified collection_exists
- Simplified material_exists
- Simplified set_material_use_nodes

=== 0.0.7 - ===

[ Curtis Holt ]
- Rearranged arguments for object transformation functions to allow only
  a single value to be provided for ease of use.

[ JYoshi ]
- Changes to how delete_object and delete_objects work.
- + get_parent
- + get_children
- + set_parent
- + clear_parent
- + delete_unused_data
- C Note: Pointed clear_unused_data and clear_unwanted_data to delete_unused_data
- Changes to get_object(), get_selected_objects(), so()
- + selected_objects